--- a/.ci/Dockerfile.ubuntu18
+++ b/.ci/Dockerfile.ubuntu18
@@ -2,13 +2,14 @@ FROM ubuntu:18.04
 
 ARG BOOST_VERSION=1.6.7
 ARG CMAKE_VERSION=3.13.0
-ARG GPP_VERSION=9.3.0
+
+SHELL [ "/bin/bash", "-c" ]
 # DEBIAN_FRONTEND=noninteractive: needed to sidestep interactivity in install
 # of tzdata, which asks for time zone info
 RUN apt-get update -y && \
     DEBIAN_FRONTEND=noninteractive \
     apt-get install -y build-essential curl clang-format\
-                 gcovr git  g++=${GPP_VERSION}\
+                 gcovr git \
                  python3 python3-pip software-properties-common \
                  autoconf automake
 
@@ -16,14 +17,8 @@ RUN curl -SL https://cmake.org/files/v$(echo $CMAKE_VERSION | sed -r 's/\.[0-9]+
     |tar -xz --strip-components=1 -C /usr/local
 
 
-
-# install boost
-RUN add-apt-repository ppa:mhier/libboost-latest
-RUN apt-get update -y && apt-get install -y libboost-dev
-
-
-RUN python -m pip3 install --upgrade pip && \
-    python -m pip3 install pre-commit conan gtirb
+RUN  python3 -m pip install --upgrade pip && \
+     python3 -m pip install pre-commit conan 
 
 # Use EDT for timestamps (necessary?)
 RUN ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime
