--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -161,7 +161,7 @@ coverage:
     - mkdir build
     - cd build
     - conan install ..
-    - cmake -DENABLE_CODE_COVERAGE=ON -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DENABLE_CONAN ..
+    - cmake -DENABLE_CODE_COVERAGE=ON -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DENABLE_CONAN=ON ..
     - make
     - ctest
     - gcovr -e googletest-src -r ..
