--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -198,8 +198,8 @@ coverage:
     - cd installers/ && dpkg-scanpackages . /dev/null > Packages
 
 .cpack-update-apt-sources-template: &cpack-update-apt-sources-template |
-    RUN wget -O - https://download.grammatech.com/gtirb/files/apt-repo/conf/apt.gpg.key | apt-key add -
-    RUN echo "deb https://download.grammatech.com/gtirb/files/apt-repo bionic latest"| sudo tee -a /etc/apt/sources.list
+    wget -O - https://download.grammatech.com/gtirb/files/apt-repo/conf/apt.gpg.key | apt-key add -
+    echo "deb https://download.grammatech.com/gtirb/files/apt-repo bionic latest"| sudo tee -a /etc/apt/sources.list
     echo -e "\ndeb [trusted=yes] file:$(pwd)/installers/ ./\n" >> /etc/apt/sources.list
     apt-get update -y
 
