--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -199,7 +199,7 @@ coverage:
 
 .cpack-update-apt-sources-template: &cpack-update-apt-sources-template |
     wget -O - https://download.grammatech.com/gtirb/files/apt-repo/conf/apt.gpg.key | apt-key add -
-    echo "deb https://download.grammatech.com/gtirb/files/apt-repo bionic latest"| sudo tee -a /etc/apt/sources.list
+    echo "deb https://download.grammatech.com/gtirb/files/apt-repo bionic latest"|  tee -a /etc/apt/sources.list
     echo -e "\ndeb [trusted=yes] file:$(pwd)/installers/ ./\n" >> /etc/apt/sources.list
     apt-get update -y
 
@@ -213,13 +213,13 @@ coverage:
       - test-install
   script:
     - *cpack-update-apt-sources-template
-    - apt-get install -y -m libgtirb-functions-dev
+    - apt-get install -y libgtirb-functions-dev
 
 .test-lib: &test-lib
   stage: cpack-test-shared-lib
   script:
     - *cpack-update-apt-sources-template
-    - apt-get install -y -m libgtirb-functions-dev
+    - apt-get install -y libgtirb-functions-dev
     # - ./test-install GrammaTech
 
 
@@ -227,9 +227,8 @@ coverage:
 .test-lib-dbg: &test-lib-dbg
   stage: cpack-test
   script:
-    - 'echo -e "\ndeb [trusted=yes] file:$(pwd)/installers/ ./\n" >> /etc/apt/sources.list'
-    - apt-get update -y
-    - apt-get install -y -m libgtirb-functions libgtirb-functions-dbg
+    - *cpack-update-apt-sources-template
+    - apt-get install -y libgtirb-functions libgtirb-functions-dbg
     - '[ -f /usr/lib/debug/.build-id/$(readelf -n /usr/lib/libgtirb-functions.so | grep "Build ID: " | cut -d":" -f2 | sed -E "s/ ([a-f0-9]{2,})([a-f0-9]{30,})/\1\/\2/g").debug ]'
 
 .debian-deploy: &debian-deploy
