--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -199,11 +199,11 @@ coverage:
 
 .cpack-update-apt-sources-template: &cpack-update-apt-sources-template |
     wget -O - https://download.grammatech.com/gtirb/files/apt-repo/conf/apt.gpg.key | apt-key add -
-    echo "deb https://download.grammatech.com/gtirb/files/apt-repo bionic stable"|  tee -a /etc/apt/sources.list
+    echo "deb https://download.grammatech.com/gtirb/files/apt-repo $DISTRO_NAME stable"|  tee -a /etc/apt/sources.list
     echo -e "\ndeb [trusted=yes] file:$(pwd)/installers/ ./\n" >> /etc/apt/sources.list
     tail /etc/apt/sources.list
     apt-cache search libgtirb
-    apt-get update -y
+    apt-get update
 
 .cpack-check-lib-build-id: &cpack-check-lib-build-id |
     [ -f /usr/lib/debug/.build-id/$(readelf -n /usr/lib/libgtirb-functions.so | grep "Build ID: " | cut -d":" -f2 | sed -E "s/ ([a-f0-9]{2})([a-f0-9]{30,})/\1\/\2/g").debug ]
@@ -255,11 +255,15 @@ setup-repo-ubuntu18:
   <<: *setup-repo
 
 test-dev-ubuntu18:
+  variables:
+    DISTRO_NAME: bionic
   needs: [setup-repo-ubuntu18]
   image: ${UBUNTU18_CPP_IMAGE}
   <<: *test-dev
 
 test-lib-ubuntu18:
+  variables:
+    DISTRO_NAME: bionic
   needs: [setup-repo-ubuntu18, test-dev-ubuntu18]
   image: ${UBUNTU18_BASE_IMAGE}
   <<: *test-lib
@@ -284,11 +288,15 @@ setup-repo-ubuntu20:
   <<: *setup-repo
 
 test-dev-ubuntu20:
+  variables:
+    DISTRO_NAME: focal
   image: ${UBUNTU20_CPP_IMAGE}
   needs: [setup-repo-ubuntu20]
   <<: *test-dev
 
 test-lib-ubuntu20:
+  variables:
+    DISTRO_NAME: focal
   image: ${UBUNTU20_BASE_IMAGE}
   needs: [setup-repo-ubuntu20, test-dev-ubuntu20]
   <<: *test-lib
