--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -202,8 +202,9 @@ coverage:
     echo "deb https://download.grammatech.com/gtirb/files/apt-repo $DISTRO_NAME stable"|  tee -a /etc/apt/sources.list
     echo -e "\ndeb [trusted=yes] file:$(pwd)/installers/ ./\n" >> /etc/apt/sources.list
     tail /etc/apt/sources.list
-    apt-cache search libgtirb
     apt-get update
+    apt-cache search libgtirb
+    
 
 .cpack-check-lib-build-id: &cpack-check-lib-build-id |
     [ -f /usr/lib/debug/.build-id/$(readelf -n /usr/lib/libgtirb-functions.so | grep "Build ID: " | cut -d":" -f2 | sed -E "s/ ([a-f0-9]{2})([a-f0-9]{30,})/\1\/\2/g").debug ]
@@ -213,12 +214,16 @@ coverage:
   artifacts:
     paths:
       - test-install
+  before_script:
+    - echo ""
   script:
     - *cpack-update-apt-sources-template
     - apt-get install -y libgtirb-functions-dev
 
 .test-lib: &test-lib
   stage: cpack-test-shared-lib
+  before_script:
+    - echo ""
   script:
     - *cpack-update-apt-sources-template
     - apt-get install -y libgtirb-functions-dev
@@ -268,10 +273,10 @@ test-lib-ubuntu18:
   image: ${UBUNTU18_BASE_IMAGE}
   <<: *test-lib
 
-# test-lib-dbg-ubuntu18:
-#   needs: [setup-repo-ubuntu18]
-#   image: ${UBUNTU18_CPP_IMAGE}
-#   <<: *test-lib-dbg
+test-lib-dbg-ubuntu18:
+  needs: [setup-repo-ubuntu18]
+  image: ${UBUNTU18_CPP_IMAGE}
+  <<: *test-lib-dbg
 
 deploy-ubuntu18:
   needs: [setup-repo-ubuntu18, test-dev-ubuntu18, test-lib-ubuntu18]
@@ -299,6 +304,8 @@ test-lib-ubuntu20:
     DISTRO_NAME: focal
   image: ${UBUNTU20_BASE_IMAGE}
   needs: [setup-repo-ubuntu20, test-dev-ubuntu20]
+  before_script:
+    {}
   <<: *test-lib
 
 # test-lib-dbg-ubuntu20:
