--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -308,10 +308,10 @@ test-lib-ubuntu20:
     {}
   <<: *test-lib
 
-# test-lib-dbg-ubuntu20:
-#   image: ${UBUNTU20_CPP_IMAGE}
-#   needs: [setup-repo-ubuntu20]
-#   <<: *test-lib-dbg
+test-lib-dbg-ubuntu20:
+  image: ${UBUNTU20_CPP_IMAGE}
+  needs: [setup-repo-ubuntu20]
+  <<: *test-lib-dbg
 
 deploy-ubuntu20:
   image: ${UBUNTU20_CPP_IMAGE}
