--- a/.ci/Dockerfile.centos8
+++ b/.ci/Dockerfile.centos8
@@ -1,9 +1,35 @@
 FROM centos:8
 
-RUN yum -y update && yum -y install curl python3 python3-pip
-RUN yum -y group install "Development Tools"
+ARG CMAKE_VERSION=3.13.0
+# Use bash for more convenient variable substitution syntax
+SHELL ["/bin/bash", "-c"]
 
-RUN pip3 install --upgrade pip && pip3 install conan
+# CentOS is configured with the locale set to en_US.UTF-8 by default, but the
+# language pack needs to be installed.
+RUN dnf install -y \
+    autoconf \
+    automake \
+    bzip2 \
+    gcc \
+    gcc-c++ \
+    git \
+    glibc-langpack-en.x86_64 \
+    libtool \
+    make \
+    python3 \
+    python3-pip \
+    python3-protobuf \
+    python3-networkx \
+    rpm-build \
+    unzip
 
-ARG CMAKE_VERSION=3.13
-RUN curl -SL https://cmake.org/files/v$CMAKE_VERSION/cmake-$CMAKE_VERSION.0-Linux-x86_64.tar.gz |tar -xz --strip-components=1 -C /usr/local
+RUN curl -SL https://cmake.org/files/v$(echo $CMAKE_VERSION | sed -r 's/\.[0-9]+$//;')/cmake-$CMAKE_VERSION-Linux-x86_64.tar.gz \
+    | tar -xz --strip-components=1 -C /usr/local
+
+RUN  python3 -m pip install --upgrade pip && \
+     python3 -m pip install conan
+# Install dependencies.  We need to use EPEL to get a new enough version of boost.
+RUN dnf install -y 'dnf-command(config-manager)'
+RUN dnf config-manager --set-enabled powertools
+RUN yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
+RUN dnf install -y boost169-devel protobuf-devel
