--- a/.ci/gitlab-ci.yaml
+++ b/.ci/gitlab-ci.yaml
@@ -188,6 +188,24 @@ coverage:
     - cpack -G DEB -D CPACK_GTIRB_FUNCTIONS_PACKAGE=dev
 
 
+.build-cpack-rpm-template: &build-cpack-rpm
+  stage: build
+  needs: [check-format]
+  artifacts:
+    paths:
+      - build/
+  script:
+    - *conan-template
+    - mkdir build
+    - cd build
+    - conan install ..
+    - cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DGTIRB_FUNCTIONS_STRIP_DEBUG_SYMBOLS=ON -DENABLE_CONAN=ON ..
+    - make
+    - ctest
+    - cpack -G RPM -D CPACK_GTIRB_FUNCTIONS_PACKAGE=lib
+    - cpack -G RPM -D CPACK_GTIRB_FUNCTIONS_PACKAGE=lib-dbg
+    - cpack -G RPM -D CPACK_GTIRB_FUNCTIONS_PACKAGE=dev
+
 .setup-repo: &setup-repo
   stage: cpack-make-installers
   artifacts:
@@ -208,6 +226,13 @@ coverage:
 
 .cpack-check-lib-build-id: &cpack-check-lib-build-id |
     [ -f /usr/lib/debug/.build-id/$(readelf -n /usr/lib/libgtirb-functions.so | grep "Build ID: " | cut -d":" -f2 | sed -E "s/ ([a-f0-9]{2})([a-f0-9]{30,})/\1\/\2/g").debug ]
+
+
+.rpm-test-package-template: &rpm-test-package-template |
+    pushd build
+    dnf --nogpgcheck localinstall *.rpm
+    popd 
+    rm -rf build/
 
 .test-dev: &test-dev
   stage: cpack-test
@@ -321,3 +346,48 @@ deploy-ubuntu20:
   image: ${UBUNTU20_CPP_IMAGE}
   needs: [setup-repo-ubuntu20, test-dev-ubuntu20, test-lib-ubuntu20]
   <<: *debian-deploy
+
+
+build-cpack-rpm:
+  image: ${CENTOS8_IMAGE}
+  <<: *build-cpack
+
+setup-repo-rpm:
+  image: ${CENTOS8_IMAGE}
+  needs: [build-cpack-rpm]
+  artifacts:
+    paths:
+        - '*.rpm'
+  script: 
+   - mv installers/*.rpm ./
+
+test-dev-rpm:
+  variables:
+    DISTRO_NAME: focal
+  image: ${CENTOS8_IMAGE}
+  needs: [setup-repo-rpm]
+  script:
+    - *rpm-test-package-template
+
+test-lib-rpm:
+  variables:
+    DISTRO_NAME: focal
+  image: ${CENTOS8_IMAGE}
+  needs: [setup-repo-rpm, test-dev-rpm]
+  before_script:
+    {}
+  script: 
+    - *rpm-test-package-template
+    - 
+test-lib-dbg-rpm:
+  variables:
+    DISTRO_NAME: focal
+  image: ${CENTOS8_IMAGE}
+  needs: [setup-repo-rpm]
+    - *rpm-test-package-template
+
+deploy-rpm:
+  image: ${CENTOS8_IMAGE}
+  needs: [setup-repo-rpm, test-dev-rpm, test-lib-rpm]
+  script: 
+    - cp installers/*.rpm ./
